fix(styles): añado el overflow-x para que vuelva el scroll en la pagina

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,7 +43,7 @@ body {
   padding: 0;
   height: 100%;
   background: var(--c-black);
-  overflow: hidden;
+  overflow-x: hidden;
   word-wrap: break-word;
 }
 
